R scripts updated to use new directory loading package.

--- a/DGE_analysis/unified_data_post_DGE_analysis.ipynb
+++ b/DGE_analysis/unified_data_post_DGE_analysis.ipynb
@@ -21,7 +21,10 @@
     }
    ],
    "source": [
-    "library(tidyverse)"
+    "library(tidyverse)\n",
+    "\n",
+    "# Custom package\n",
+    "library(rutils)"
    ]
   },
   {
@@ -37,15 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in root data directory\n",
-    "con <- file(\"../dev_paths.txt\", \"r\")\n",
-    "data_dir <- readLines(con,n=1)\n",
-    "close(con)\n",
-    "\n",
+    "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "dsets <- c(\"unified_cervical_data\")\n",
-    "dset_paths <- unlist(map(dsets, function(d) paste0(data_dir, \"/\", d)))\n",
-    "analysis_dir <- paste(data_dir, \"analysis\", sep = \"/\")\n",
-    "matrisome_list <- paste(data_dir, \"matrisome\", \"matrisome_hs_masterlist.tsv\", sep = \"/\")\n",
+    "dset_paths <- unlist(map(dsets, function(d) paste0(dirs$data_dir, \"/\", d)))\n",
+    "matrisome_list <- matrisome_list <- paste(dirs$data_dir, \"matrisome\", \"matrisome_hs_masterlist.tsv\", sep = \"/\")\n",
     "dset_idx <- 1"
    ]
   },
@@ -86,7 +84,7 @@
     }
    ],
    "source": [
-    "dge_res_informed_df <- read_tsv(paste0(analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))\n",
+    "dge_res_informed_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))\n",
     "sig_dge_res_informed_df <- dplyr::filter(dge_res_informed_df, padj < 0.05)"
    ]
   },
@@ -372,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -727,13 +725,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_tsv(sig_dge_matrisome_left_join_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_stat_sig_DESeq_results_xref_matrisome.tsv\"))\n",
-    "write_tsv(matrisome_sig_DEG_category_counts_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_matrisome_stat_sig_DEG_category_counts.tsv\"))\n",
-    "write_tsv(all_dge_matrisome_right_join_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_all_matrisome_xref_unified_data.tsv\"))"
+    "write_tsv(sig_dge_matrisome_left_join_df, paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_stat_sig_DESeq_results_xref_matrisome.tsv\"))\n",
+    "write_tsv(matrisome_sig_DEG_category_counts_df, paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_matrisome_stat_sig_DEG_category_counts.tsv\"))\n",
+    "write_tsv(all_dge_matrisome_right_join_df, paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_all_matrisome_xref_unified_data.tsv\"))"
    ]
   }
  ],
