--- a/DGE_analysis/unified_data_DGE_analysis.ipynb
+++ b/DGE_analysis/unified_data_DGE_analysis.ipynb
@@ -124,7 +124,10 @@
    "source": [
     "library(tidyverse)\n",
     "library(DESeq2)\n",
-    "library(BiocParallel)"
+    "library(BiocParallel)\n",
+    "\n",
+    "# Custom package\n",
+    "library(rutils)"
    ]
   },
   {
@@ -146,19 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in root data directory\n",
-    "con <- file(\"../dev_paths.txt\", \"r\")\n",
-    "data_dir <- readLines(con,n=1)\n",
-    "close(con)\n",
-    "\n",
+    "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "dsets <- c(\"unified_cervical_data\")\n",
-    "dset_paths <- unlist(map(dsets, function(d) paste0(data_dir, \"/\", d)))\n",
-    "analysis_dir <- paste(data_dir, \"analysis\", sep = \"/\")\n",
-    "matrisome_list <- paste(data_dir, \"matrisome\", \"matrisome_hs_masterlist.tsv\", sep = \"/\")\n",
+    "dset_paths <- unlist(map(dsets, function(d) paste0(dirs$data_dir, \"/\", d)))\n",
+    "matrisome_list <- matrisome_list <- paste(dirs$data_dir, \"matrisome\", \"matrisome_hs_masterlist.tsv\", sep = \"/\")\n",
     "dset_idx <- 1"
    ]
   },
@@ -171,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -415,11 +413,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_tsv(dge_res_informed_df, paste0(analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))"
+    "write_tsv(dge_res_informed_df, paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))"
    ]
   }
  ],
