Updated analysis so that alpha matches padj threshold.

--- a/preprocessing/unified_data_prep.ipynb
+++ b/preprocessing/unified_data_prep.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "# Read in root data directory\n",
     "with open('../dev_paths.txt') as f:\n",
-    "    data_dir = f.readline()\n",
+    "    data_dir = f.readline().strip()\n",
     "\n",
     "cvx_healthy = [\"cervixrsemcountgtex.txt.gz\", \"cescrsemcounttcga.txt.gz\"]\n",
     "cvx_tumor = [\"cescrsemcounttcgat.txt.gz\"]\n",
@@ -112,13 +112,6 @@
     "save_for_DESeq(data_dir, cvx_healthy, cvx_tumor, \"unified_cervical_data\", gene_cols, \"healthy\", \"tumor\")\n",
     "# save_for_DESeq(data_dir, ut_healthy, ut_tumor, \"unified_uterine_data\", gene_cols, \"healthy\", \"tumor\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
