--- a/DGE_analysis/unified_data_DGE_analysis.ipynb
+++ b/DGE_analysis/unified_data_DGE_analysis.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -149,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +152,9 @@
     "dsets <- c(\"unified_cervical_data\")\n",
     "dset_paths <- unlist(map(dsets, function(d) paste0(dirs$data_dir, \"/\", d)))\n",
     "matrisome_list <- matrisome_list <- paste(dirs$data_dir, \"matrisome\", \"matrisome_hs_masterlist.tsv\", sep = \"/\")\n",
-    "dset_idx <- 1"
+    "dset_idx <- 1\n",
+    "                         \n",
+    "padj_thresh <- 0.05"
    ]
   },
   {
@@ -169,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +178,7 @@
     "        dds_seq,\n",
     "        contrast = c(\"condition\", \"tumor\", \"healthy\"),\n",
     "        pAdjustMethod = \"BH\",\n",
+    "        alpha = padj_thresh,\n",
     "        parallel = TRUE\n",
     "    )\n",
     "    return(as_tibble(res, rownames = \"geneID\"))\n",
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -370,27 +368,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How many significant DEGs? (p-value < 0.05)"
+    "### How many significant DEGs? (p-value < `padj_thresh`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "4648"
+       "4694"
       ],
       "text/latex": [
-       "4648"
+       "4694"
       ],
       "text/markdown": [
-       "4648"
+       "4694"
       ],
       "text/plain": [
-       "[1] 4648"
+       "[1] 4694"
       ]
      },
      "metadata": {},
@@ -398,8 +396,8 @@
     }
    ],
    "source": [
-    "# sig_dge_res_naive_df <- dplyr::filter(dge_res_naive_df, padj < 0.05)\n",
-    "sig_dge_res_informed_df <- dplyr::filter(dge_res_informed_df, padj < 0.05)\n",
+    "# sig_dge_res_naive_df <- dplyr::filter(dge_res_naive_df, padj < padj_thresh)\n",
+    "sig_dge_res_informed_df <- dplyr::filter(dge_res_informed_df, padj < padj_thresh)\n",
     "# nrow(sig_dge_res_naive_df)\n",
     "nrow(sig_dge_res_informed_df)"
    ]
@@ -413,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
