Previous commit staged from wrong directory.

--- a/DGE_analysis/unified_data_post_DGE_analysis.ipynb
+++ b/DGE_analysis/unified_data_post_DGE_analysis.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -84,8 +84,49 @@
     }
    ],
    "source": [
-    "dge_res_informed_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))\n",
-    "sig_dge_res_informed_df <- dplyr::filter(dge_res_informed_df, padj < 0.05)"
+    "dge_res_informed_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sig_dge_res_informed_df <- dplyr::filter(dge_res_informed_df, padj < 0.05)\n",
+    "\n",
+    "# Filter for log fold change of 1 (2x)\n",
+    "sig_dge_res_informed_df <- dge_res_informed_df %>%\n",
+    "    dplyr::filter(padj < 0.05) %>%\n",
+    "    dplyr::filter(abs(log2FoldChange) > log2(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4374"
+      ],
+      "text/latex": [
+       "4374"
+      ],
+      "text/markdown": [
+       "4374"
+      ],
+      "text/plain": [
+       "[1] 4374"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nrow(sig_dge_res_informed_df)"
    ]
   },
   {
@@ -97,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
