--- a/TCGA_vis/TCGA_prep_data_v3.ipynb
+++ b/TCGA_vis/TCGA_prep_data_v3.ipynb
@@ -127,7 +127,10 @@
    "source": [
     "library(tidyverse)\n",
     "library(HDF5Array)\n",
-    "library(SummarizedExperiment)"
+    "library(SummarizedExperiment)\n",
+    "\n",
+    "# Custom package\n",
+    "library(rutils)"
    ]
   },
   {
@@ -137,11 +140,12 @@
    "outputs": [],
    "source": [
     "projects <- c(\"TCGA-CESC\", \"TCGA-OV\", \"TCGA-UCS\", \"TCGA-UCEC\")\n",
-    "data_root <- \"../../../../../mnt/d/TCGA\"\n",
+    "data_root <- \"../../../../../mnt/d\"\n",
+    "matrisome_file <- paste(data_root, \"unified_TCGA_GTEx_data\", \"matrisome\", \"matrisome_hs_masterlist.tsv\", sep = \"/\")\n",
     "\n",
     "project_dirs <- sapply(\n",
     "    projects, \n",
-    "    (function(p) paste0(data_root, \"/\", p, \"-\", \"TCGAbiolinks\"))\n",
+    "    (function(p) paste0(data_root, \"/\", \"TCGA\", \"/\", p, \"-\", \"TCGAbiolinks\"))\n",
     ")"
    ]
   },
@@ -158,15 +162,40 @@
     "        data_ls[[dset_name]] <- loadHDF5SummarizedExperiment(dir = dir, prefix = dset_name)\n",
     "    }\n",
     "    return(data_ls)\n",
+    "}\n",
+    "\n",
+    "\n",
+    "filter_sample_types <- function(rses, field, keepers) {\n",
+    "    names_ <- names(rses)\n",
+    "    filtered_data_ls <- list()\n",
+    "    for (n in names_) {\n",
+    "        mask <- rses[[n]][[field]] %in% keepers\n",
+    "        filtered_data_ls[[n]] <- rses[[n]][, mask]\n",
+    "    }\n",
+    "    return(filtered_data_ls)\n",
+    "}\n",
+    "\n",
+    "\n",
+    "prep_and_save_count_data <- function(rses, label_field, dest_dir, dest_subdir) {\n",
+    "    id_symbol_map <- as_tibble(rowData(rses[[1]]))\n",
+    "    for (n in names(rses)) {\n",
+    "        counts_df <- assays(rses[[n]])[[\"HTSeq - Counts\"]] %>%\n",
+    "            as_tibble(rownames = \"ensembl_gene_id\") %>%\n",
+    "            inner_join(id_symbol_map, by = \"ensembl_gene_id\") %>%\n",
+    "            dplyr::select(ensembl_gene_id, external_gene_name, everything()) %>%\n",
+    "            dplyr::select(-original_ensembl_gene_id)\n",
+    "        \n",
+    "        condition_labels <- rses[[n]][[label_field]]\n",
+    "        coldata_df <- as_tibble(colnames(counts_df)[-c(1:2)]) %>%\n",
+    "            dplyr::rename(sample_name = value) %>%\n",
+    "            mutate(condition = condition_labels) %>%\n",
+    "            mutate(project = n)\n",
+    "        \n",
+    "        write_tsv(counts_df, path = paste0(dest_dir, \"/\", dest_subdir, \"/\", n, \"_counts.tsv\"))\n",
+    "        write_tsv(coldata_df, path = paste0(dest_dir, \"/\", dest_subdir, \"/\", n, \"_coldata.tsv\"))\n",
+    "    }\n",
     "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -174,44 +203,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_ls <- load_RSE_objects(paste0(data_root, \"/\", \"saved_RSE_objects\"), projects)"
+    "data_ls <- load_RSE_objects(paste0(data_root, \"/\", \"TCGA\", \"/\", \"saved_RSE_objects\"), projects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tumor_data_ls <- filter_sample_types(data_ls, field = \"definition\", keepers = c(\"Primary solid Tumor\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "all(rowData(data_ls$TCGA_CESC)$ensembl_gene_id == rownames(assay(data_ls$TCGA_CESC)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "counts <- "
+    "prep_and_save_count_data(\n",
+    "    rses = tumor_data_ls,\n",
+    "    label_field = \"definition\",\n",
+    "    dest_dir = data_root,\n",
+    "    dest_subdir = \"TCGA/matrix_count_data\"\n",
+    ")"
    ]
   }
  ],
