Have a working version with more heavily filtered data & data being normalized after filtering.

--- a/TCGA_vis/TCGA_vis_v1.ipynb
+++ b/TCGA_vis/TCGA_vis_v1.ipynb
@@ -117,12 +117,12 @@
     "}\n",
     "\n",
     "\n",
-    "pca_scatter <- function(df, pc_x, pc_y, col) {\n",
+    "pca_scatter <- function(df, pc_x, pc_y, pc_x_pctvar, pc_y_pctvar, col) {\n",
     "    plt <- ggplot(df) +\n",
     "        aes_string(x = pc_x, y = pc_y, color = col) +\n",
     "        geom_point(size=1) +\n",
-    "        xlab(paste0(pc_x)) + \n",
-    "        ylab(paste0(pc_y)) +\n",
+    "        xlab(paste0(pc_x, \" (\", pc_x_pctvar, \"%)\")) + \n",
+    "        ylab(paste0(pc_y, \" (\", pc_y_pctvar, \"%)\")) +\n",
     "        coord_fixed()\n",
     "    return(plt)\n",
     "}"
