Re-ran notebooks and found bug in file name reference.

--- a/DGE_analysis/unified_DGE_v2_post.ipynb
+++ b/DGE_analysis/unified_DGE_v2_post.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
-      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
-      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "\n",
@@ -36,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in readLines(con):\n",
+      "“incomplete final line found on '../dev_paths.txt'”"
+     ]
+    }
+   ],
    "source": [
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "dsets <- c(\"unified_cervical_data\")\n",
@@ -49,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +70,7 @@
     }
    ],
    "source": [
-    "dge_res_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_unfiltered_DESeq_results.tsv\"))\n",
+    "dge_res_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", dsets[dset_idx], \"_DESeq_results.tsv\"))\n",
     "counts_df <- read_tsv(paste0(dirs$data_dir, \"/\", dsets[dset_idx], \"/counts.tsv\")) %>%\n",
     "    dplyr::rename(\"geneID\" = \"Hugo_Symbol\") %>%\n",
     "    dplyr::select(-\"Entrez_Gene_Id\")"
@@ -84,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
