Removed past versions of DGE analysis code.

--- a/DGE_analysis/unified_DGE.ipynb
+++ b/DGE_analysis/unified_DGE.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -182,8 +187,6 @@
    "outputs": [],
    "source": [
     "run_DESeq_and_get_results <- function(dds) {\n",
-    "    #We want results without outlier removal or independent filtering since filtering should happen downstream.\n",
-    "    #See docs: https://bioconductor.org/packages/devel/bioc/vignettes/DESeq2/inst/doc/DESeq2.html#how-can-i-get-unfiltered-deseq2-results\n",
     "    dds_seq <- DESeq(dds, parallel = TRUE)\n",
     "    res <- results(\n",
     "        dds_seq,\n",
