--- a/data_retrieval/TCGA_get_RNA_data.ipynb
+++ b/data_retrieval/TCGA_get_RNA_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -14,6 +14,97 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n",
+      "Loading required package: DelayedArray\n",
+      "Loading required package: stats4\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "Attaching package: ‘matrixStats’\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    count\n",
+      "\n",
+      "Loading required package: BiocGenerics\n",
+      "Loading required package: parallel\n",
+      "\n",
+      "Attaching package: ‘BiocGenerics’\n",
+      "\n",
+      "The following objects are masked from ‘package:parallel’:\n",
+      "\n",
+      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
+      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
+      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    combine, intersect, setdiff, union\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    IQR, mad, sd, var, xtabs\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
+      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
+      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
+      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
+      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
+      "    union, unique, unsplit, which, which.max, which.min\n",
+      "\n",
+      "Loading required package: S4Vectors\n",
+      "\n",
+      "Attaching package: ‘S4Vectors’\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    first, rename\n",
+      "\n",
+      "The following object is masked from ‘package:tidyr’:\n",
+      "\n",
+      "    expand\n",
+      "\n",
+      "The following object is masked from ‘package:base’:\n",
+      "\n",
+      "    expand.grid\n",
+      "\n",
+      "Loading required package: IRanges\n",
+      "\n",
+      "Attaching package: ‘IRanges’\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    collapse, desc, slice\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    reduce\n",
+      "\n",
+      "Loading required package: BiocParallel\n",
+      "\n",
+      "Attaching package: ‘DelayedArray’\n",
+      "\n",
+      "The following objects are masked from ‘package:matrixStats’:\n",
+      "\n",
+      "    colMaxs, colMins, colRanges, rowMaxs, rowMins, rowRanges\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    simplify\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    aperm, apply, rowsum\n",
+      "\n",
+      "Loading required package: rhdf5\n",
       "Loading required package: GenomicRanges\n",
       "Loading required package: GenomeInfoDb\n",
       "Loading required package: Biobase\n",
@@ -74,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,15 +176,6 @@
     "        data.type = \"Gene Expression Quantification\",\n",
     "        workflow.type = \"HTSeq - Counts\"\n",
     "    ))\n",
-    "}\n",
-    "\n",
-    "\n",
-    "load_RSE_objects <- function(dir, projects, prefixes) {\n",
-    "    data_ls <- list()\n",
-    "    for (i in seq_len(length(projects))) {\n",
-    "        data_ls[[projects[i]]] <- loadHDF5SummarizedExperiment(dir = dir, prefix = prefixes[i])\n",
-    "    }\n",
-    "    return(data_ls)\n",
     "}\n",
     "\n",
     "\n",
@@ -2347,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
