Created unified uterine & uterine endometrial datasets.

--- a/DGE_analysis/unified_DGE_vis.ipynb
+++ b/DGE_analysis/unified_DGE_vis.ipynb
@@ -197,7 +197,7 @@
     "dge_res_df %>%\n",
     "    to_vplot_df() %>%\n",
     "    make_vplot()\n",
-    "ggsave(paste0(dirs$figures_dir, \"/all_genes_vplot.png\"), last_plot())"
+    "ggsave(paste0(dirs$figures_dir, \"/\", dsets[dset_idx], \"all_genes_vplot.png\"), last_plot())"
    ]
   },
   {
@@ -230,7 +230,7 @@
     "matrisome_summary_df %>%\n",
     "    to_vplot_df() %>%\n",
     "    make_vplot()\n",
-    "ggsave(paste0(dirs$figures_dir, \"/matrisome_genes_vplot.png\"), last_plot())"
+    "ggsave(paste0(dirs$figures_dir, \"/\", dsets[dset_idx], \"matrisome_genes_vplot.png\"), last_plot())"
    ]
   },
   {
@@ -548,7 +548,7 @@
    ],
    "source": [
     "sn\n",
-    "saveNetwork(sn, paste0(dirs$figures_dir, \"/matrisome_sankey_diagram.html\"))"
+    "saveNetwork(sn, paste0(dirs$figures_dir, \"/\", dsets[dset_idx], \"matrisome_sankey_diagram.html\"))"
    ]
   },
   {
