--- a/preprocessing/unified_RNA_data_prep.ipynb
+++ b/preprocessing/unified_RNA_data_prep.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,8 @@
     "\n",
     "\n",
     "def save_for_DESeq(data_dir, healthy_files, tumor_files, dset_name, gene_cols, healthy_level, tumor_level):\n",
-    "    healthy_dfs = [pd.read_csv(f\"{data_dir}/{fn}\", sep=\"\\t\", compression=\"gzip\") for fn in healthy_files]\n",
-    "    tumor_dfs = [pd.read_csv(f\"{data_dir}/{fn}\", sep=\"\\t\", compression=\"gzip\") for fn in tumor_files]\n",
+    "    healthy_dfs = [pd.read_csv(f\"{data_dir}/raw_unified_TCGA_GTEx/{fn}\", sep=\"\\t\", compression=\"gzip\") for fn in healthy_files]\n",
+    "    tumor_dfs = [pd.read_csv(f\"{data_dir}/raw_unified_TCGA_GTEx/{fn}\", sep=\"\\t\", compression=\"gzip\") for fn in tumor_files]\n",
     "    \n",
     "    healthy_srcs = []\n",
     "    tumor_srcs = []\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,20 +98,29 @@
     "\n",
     "cvx_healthy = [\"cervixrsemcountgtex.txt.gz\", \"cescrsemcounttcga.txt.gz\"]\n",
     "cvx_tumor = [\"cescrsemcounttcgat.txt.gz\"]\n",
-    "# ut_healthy = [\"uterusrsemcountgtex.txt.gz\", \"ucecrsemcounttcga.txt.gz\"]\n",
-    "# ut_tumor = [\"ucecrsemcounttcgat.txt.gz\", \"ucsrsemcounttcgat.txt.gz\"]\n",
+    "ut_healthy = [\"uterusrsemcountgtex.txt.gz\", \"ucecrsemcounttcga.txt.gz\"]\n",
+    "ut_tumor = [\"ucsrsemcounttcgat.txt.gz\"]\n",
+    "ut_endo_tumor = [\"ucecrsemcounttcgat.txt.gz\"]\n",
     "gene_cols = [\"Hugo_Symbol\", \"Entrez_Gene_Id\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_for_DESeq(data_dir, cvx_healthy, cvx_tumor, \"unified_cervical_data\", gene_cols, \"healthy\", \"tumor\")\n",
-    "# save_for_DESeq(data_dir, ut_healthy, ut_tumor, \"unified_uterine_data\", gene_cols, \"healthy\", \"tumor\")"
+    "save_for_DESeq(data_dir, ut_healthy, ut_tumor, \"unified_uterine_data\", gene_cols, \"healthy\", \"tumor\")\n",
+    "save_for_DESeq(data_dir, ut_healthy, ut_endo_tumor, \"unified_uterine_endometrial_data\", gene_cols, \"healthy\", \"tumor\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
