Updated survival data preprocessing to create dataset for all cancer data.

--- a/TCGA_analysis/TCGA_vis.ipynb
+++ b/TCGA_analysis/TCGA_vis.ipynb
@@ -223,7 +223,7 @@
    ],
    "source": [
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
-    "projects <- c(\"TCGA-CESC\", \"TCGA-OV\", \"TCGA-UCS\", \"TCGA-UCEC\")\n",
+    "projects <- c(\"TCGA-CESC\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-OV\")\n",
     "count_files <- Sys.glob(paths = paste0(dirs$data_dir, \"/TCGA_RNA_matrix_count_data\", \"/*counts.tsv\"))\n",
     "coldata_files <- Sys.glob(paths = paste0(dirs$data_dir, \"/TCGA_RNA_matrix_count_data\", \"/*coldata.tsv\"))\n",
     "\n",
