--- a/preprocessing/survival_data_prep.ipynb
+++ b/preprocessing/survival_data_prep.ipynb
@@ -141,8 +141,8 @@
    "outputs": [],
    "source": [
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
-    "projects <- c(\"TCGA-CESC\", \"TCGA-OV\", \"TCGA-UCS\", \"TCGA-UCEC\")\n",
-    "unified_dsets <- c(\"unified_cervical_data\")\n",
+    "projects <- c(\"TCGA-CESC\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-OV\")\n",
+    "unified_dsets <- c(\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\")\n",
     "RSE_objects_dir <- \"saved_RSE_objects\"\n",
     "biolinks_dir <- \"tcga_biolinks_downloads\"\n",
     "TCGA_dest_dir <- paste0(dirs$data_dir, \"/\", biolinks_dir)\n",
@@ -185,7 +185,7 @@
     "\n",
     "get_survival_meta <- function(RSE_obj) {\n",
     "    race_df <- tibble(race = RSE_obj$race)\n",
-    "    race_one_hot <- model.matrix(~race - 1, race_df)\n",
+    "    race_one_hot <- model.matrix(~race - 1, model.frame(~ ., race_df, na.action = na.pass))\n",
     "    colnames(race_one_hot) <- gsub(\" \", \"_\", colnames(race_one_hot))\n",
     "    colnames(race_one_hot) <- sub(\"race\", \"race_\", colnames(race_one_hot))\n",
     "    \n",
@@ -225,6 +225,18 @@
       "  sample_name = col_character(),\n",
       "  condition = col_character(),\n",
       "  data_source = col_character()\n",
+      ")\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  sample_name = col_character(),\n",
+      "  condition = col_character(),\n",
+      "  data_source = col_character()\n",
+      ")\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  sample_name = col_character(),\n",
+      "  condition = col_character(),\n",
+      "  data_source = col_character()\n",
       ")\n"
      ]
     }
@@ -243,6 +255,13 @@
     "    write_tsv(filtered_unified_survival_meta_df, paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\"))\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
