Played around with basic Kaplain-Meier survival curve.

--- a/preprocessing/survival_data_prep.ipynb
+++ b/preprocessing/survival_data_prep.ipynb
@@ -183,31 +183,30 @@
     "}\n",
     "\n",
     "\n",
-    "get_survival_meta <- function(RSE_obj) {\n",
+    "get_clinical_df <- function(RSE_obj) {\n",
     "    race_df <- tibble(race = RSE_obj$race)\n",
     "    race_one_hot <- model.matrix(~race - 1, model.frame(~ ., race_df, na.action = na.pass))\n",
     "    colnames(race_one_hot) <- gsub(\" \", \"_\", colnames(race_one_hot))\n",
     "    colnames(race_one_hot) <- sub(\"race\", \"race_\", colnames(race_one_hot))\n",
-    "    \n",
-    "    survival_meta_df <- tibble(\n",
-    "        barcode = RSE_obj$barcode,\n",
-    "        days_to_death = RSE_obj$days_to_death,\n",
-    "        vital_status = RSE_obj$vital_status,\n",
-    "        definition = RSE_obj$definition,\n",
-    "        age_at_diagnosis = RSE_obj$age_at_diagnosis,\n",
-    "        bmi = RSE_obj$bmi\n",
-    "    ) %>% bind_cols(as_tibble(race_one_hot))\n",
+    "\n",
+    "    ethnicity_df <- tibble(ethnicity = RSE_obj$ethnicity)\n",
+    "    ethnicity_one_hot <- model.matrix(~ethnicity - 1, model.frame(~ ., ethnicity_df, na.action = na.pass))\n",
+    "    colnames(ethnicity_one_hot) <- gsub(\" \", \"_\", colnames(ethnicity_one_hot))\n",
+    "    colnames(ethnicity_one_hot) <- gsub(\"ethnicity\", \"ethnicity_\", colnames(ethnicity_one_hot))\n",
+    "\n",
+    "    clinical_df <- as_tibble(colData(RSE_obj)) %>%\n",
+    "        bind_cols(as_tibble(race_one_hot)) %>%\n",
+    "        bind_cols(as_tibble(ethnicity_one_hot))\n",
+    "    return(clinical_df)\n",
     "}\n",
     "\n",
     "\n",
-    "get_unified_survival_meta <- function(unified_tumor_df, survival_df) {\n",
-    "    unified_survival_df <- unified_tumor_df %>%\n",
-    "        left_join(survival_df, by = c(\"sample_name\" = \"barcode\"), keep = TRUE) %>%\n",
-    "        mutate(present_in_harmonized = !is.na(barcode)) %>%\n",
-    "        dplyr::select(-barcode) %>%    # Since we have \"present_in_harmonized\", this is no longer needed\n",
-    "        dplyr::filter(present_in_harmonized == TRUE) %>%\n",
-    "        dplyr::filter(definition == \"Primary solid Tumor\") %>%\n",
-    "        dplyr::select(-definition)    # \"definition\" is now redundant with \"condition\"\n",
+    "get_survival_df <- function(unified_tumor_samples_df, clinical_df, keeper_cols) {\n",
+    "    survival_df <- unified_tumor_samples_df %>%\n",
+    "        left_join(clinical_df, by = c(\"sample_name\" = \"barcode\")) %>%\n",
+    "        mutate(survival_time = pmax(days_to_last_follow_up, days_to_death, na.rm = TRUE)) %>%\n",
+    "        dplyr::select(one_of(keeper_cols))\n",
+    "    return(survival_df)\n",
     "}"
    ]
   },
@@ -243,25 +242,17 @@
    ],
    "source": [
     "for (i in seq_len(length(unified_dsets))) {\n",
-    "    unified_tumor_coldata_df <- get_unified_tumor_coldata(unified_dsets[i])\n",
-    "    survival_meta_df <- get_survival_meta(data_ls[[projects[i]]])\n",
-    "    unified_survival_meta_df <- get_unified_survival_meta(unified_tumor_coldata_df, survival_meta_df)\n",
+    "    unified_tumor_samples_df <- get_unified_tumor_coldata(unified_dsets[i]) %>%\n",
+    "        dplyr::select(sample_name)\n",
+    "    clinical_df <- get_clinical_df(data_ls[[i]])\n",
+    "    race_cols <- colnames(clinical_df)[grepl(\"^race_\", colnames(clinical_df))]\n",
+    "    ethnicity_cols <- colnames(clinical_df)[grepl(\"^ethnicity_\", colnames(clinical_df))]\n",
+    "    keeper_cols <- c(\"vital_status\", \"days_to_last_follow_up\", \"days_to_death\", \"survival_time\", \"age_at_diagnosis\", \"age_at_index\", \"height\", \"weight\", \"bmi\", race_cols, ethnicity_cols)\n",
+    "    survival_df <- get_survival_df(unified_tumor_samples_df, clinical_df, keeper_cols)\n",
     "    \n",
-    "    filtered_unified_survival_meta_df <- unified_survival_meta_df %>%\n",
-    "        dplyr::filter(!is.na(days_to_death)) %>%\n",
-    "        dplyr::filter(present_in_harmonized == TRUE) %>%\n",
-    "        dplyr::select(-present_in_harmonized)\n",
-    "    \n",
-    "    write_tsv(filtered_unified_survival_meta_df, paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\"))\n",
+    "    write_tsv(survival_df, paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\"))\n",
     "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
