Fixed bug in survival data prep -- now writing out sample names with survival data

--- a/preprocessing/survival_data_prep.ipynb
+++ b/preprocessing/survival_data_prep.ipynb
@@ -247,7 +247,7 @@
     "    clinical_df <- get_clinical_df(data_ls[[i]])\n",
     "    race_cols <- colnames(clinical_df)[grepl(\"^race_\", colnames(clinical_df))]\n",
     "    ethnicity_cols <- colnames(clinical_df)[grepl(\"^ethnicity_\", colnames(clinical_df))]\n",
-    "    keeper_cols <- c(\"vital_status\", \"days_to_last_follow_up\", \"days_to_death\", \"survival_time\", \"age_at_diagnosis\", \"age_at_index\", \"height\", \"weight\", \"bmi\", race_cols, ethnicity_cols)\n",
+    "    keeper_cols <- c(\"sample_name\", \"vital_status\", \"days_to_last_follow_up\", \"days_to_death\", \"survival_time\", \"age_at_diagnosis\", \"age_at_index\", \"height\", \"weight\", \"bmi\", race_cols, ethnicity_cols)\n",
     "    survival_df <- get_survival_df(unified_tumor_samples_df, clinical_df, keeper_cols)\n",
     "    \n",
     "    write_tsv(survival_df, paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/survival_data.tsv\"))\n",
