--- a/preprocessing/survival_data_prep.ipynb
+++ b/preprocessing/survival_data_prep.ipynb
@@ -2,128 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
-      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
-      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "Loading required package: DelayedArray\n",
-      "Loading required package: stats4\n",
-      "Loading required package: matrixStats\n",
-      "\n",
-      "Attaching package: ‘matrixStats’\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    count\n",
-      "\n",
-      "Loading required package: BiocGenerics\n",
-      "Loading required package: parallel\n",
-      "\n",
-      "Attaching package: ‘BiocGenerics’\n",
-      "\n",
-      "The following objects are masked from ‘package:parallel’:\n",
-      "\n",
-      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
-      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
-      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    combine, intersect, setdiff, union\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    IQR, mad, sd, var, xtabs\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
-      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
-      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
-      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
-      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
-      "    union, unique, unsplit, which, which.max, which.min\n",
-      "\n",
-      "Loading required package: S4Vectors\n",
-      "\n",
-      "Attaching package: ‘S4Vectors’\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    first, rename\n",
-      "\n",
-      "The following object is masked from ‘package:tidyr’:\n",
-      "\n",
-      "    expand\n",
-      "\n",
-      "The following object is masked from ‘package:base’:\n",
-      "\n",
-      "    expand.grid\n",
-      "\n",
-      "Loading required package: IRanges\n",
-      "\n",
-      "Attaching package: ‘IRanges’\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    collapse, desc, slice\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    reduce\n",
-      "\n",
-      "Loading required package: BiocParallel\n",
-      "\n",
-      "Attaching package: ‘DelayedArray’\n",
-      "\n",
-      "The following objects are masked from ‘package:matrixStats’:\n",
-      "\n",
-      "    colMaxs, colMins, colRanges, rowMaxs, rowMins, rowRanges\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    simplify\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    aperm, apply, rowsum\n",
-      "\n",
-      "Loading required package: rhdf5\n",
-      "Loading required package: GenomicRanges\n",
-      "Loading required package: GenomeInfoDb\n",
-      "Loading required package: Biobase\n",
-      "Welcome to Bioconductor\n",
-      "\n",
-      "    Vignettes contain introductory material; view with\n",
-      "    'browseVignettes()'. To cite Bioconductor, see\n",
-      "    'citation(\"Biobase\")', and for packages 'citation(\"pkgname\")'.\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘Biobase’\n",
-      "\n",
-      "The following objects are masked from ‘package:matrixStats’:\n",
-      "\n",
-      "    anyMissing, rowMedians\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(HDF5Array)\n",
@@ -136,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,11 +67,13 @@
     "get_clinical_df <- function(RSE_obj) {\n",
     "    race_df <- tibble(race = RSE_obj$race)\n",
     "    race_one_hot <- model.matrix(~race - 1, model.frame(~ ., race_df, na.action = na.pass))\n",
+    "#     race_one_hot <- model.matrix(~race, model.frame(~ ., race_df, na.action = na.pass))\n",
     "    colnames(race_one_hot) <- gsub(\" \", \"_\", colnames(race_one_hot))\n",
     "    colnames(race_one_hot) <- sub(\"race\", \"race_\", colnames(race_one_hot))\n",
     "\n",
     "    ethnicity_df <- tibble(ethnicity = RSE_obj$ethnicity)\n",
     "    ethnicity_one_hot <- model.matrix(~ethnicity - 1, model.frame(~ ., ethnicity_df, na.action = na.pass))\n",
+    "#     ethnicity_one_hot <- model.matrix(~ethnicity, model.frame(~ ., ethnicity_df, na.action = na.pass))\n",
     "    colnames(ethnicity_one_hot) <- gsub(\" \", \"_\", colnames(ethnicity_one_hot))\n",
     "    colnames(ethnicity_one_hot) <- gsub(\"ethnicity\", \"ethnicity_\", colnames(ethnicity_one_hot))\n",
     "\n",
@@ -212,8 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
