Notebook for creating unified matrisome/normalized matrisome count data.

--- a/TCGA_analysis/TCGA_MI_feature_selection.ipynb
+++ b/TCGA_analysis/TCGA_MI_feature_selection.ipynb
@@ -2,30 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from utils.dev_config import get_dev_directories"
+    "import utils.dev_config as dev_conf\n",
+    "import utils.preprocessing as prep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirs = get_dev_directories(\"../dev_paths.txt\")\n",
+    "dirs = dev_conf.get_dev_directories(\"../dev_paths.txt\")\n",
     "unified_dsets = [\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\"]\n",
     "matrisome_list = f\"{dirs.data_dir}/matrisome/matrisome_hs_masterlist.tsv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +35,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrisome_df = pd.read_csv(matrisome_list, sep='\\t')\n",
-    "sig_deg_df = pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_sig_DESeq_results_xref_matrisome.tsv\", sep = '\\t')"
+    "# matrisome_df = pd.read_csv(matrisome_list, sep='\\t')\n",
+    "matrisome_df = prep.load_matrisome_df(matrisome_list)\n",
+    "sig_deg_df = pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_sig_DESeq_results_xref_matrisome.tsv\", sep = '\\t')\n",
+    "matrisome_sig_deg_df = (\n",
+    "    sig_deg_df.query(\"in_matrisome == True\")\n",
+    "        .reset_index(drop=True)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load and filter survival data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_code = {\"Alive\": 0, \"Dead\": 1}\n",
+    "covariate_cols = [\"age_at_diagnosis\", \"bmi\", \"race\", \"ethnicity\"]\n",
+    "dep_cols = [\"vital_status\", \"survival_time\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survival_df = prep.load_survival_df(f\"{dirs.data_dir}/{unified_dsets[i]}/survival_data.tsv\", event_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_survival_df = (\n",
+    "    survival_df[[\"sample_name\"] + dep_cols + covariate_cols]\n",
+    "        .query(\"vital_status == 1\")\n",
+    "        .dropna()\n",
+    "        .reset_index(drop=True)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18532818532818532"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_survival_df.shape[0]\n",
+    "filtered_survival_df.shape[0] / survival_df.shape[0]"
    ]
   }
  ],
