--- a/ML_analysis/coxph_feature_selection.ipynb
+++ b/ML_analysis/coxph_feature_selection.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -22,103 +17,7 @@
       "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "✖ dplyr::filter() masks stats::filter()\n",
       "✖ dplyr::lag()    masks stats::lag()\n",
-      "Loading required package: ggpubr\n",
-      "Loading required package: S4Vectors\n",
-      "Loading required package: stats4\n",
-      "Loading required package: BiocGenerics\n",
-      "Loading required package: parallel\n",
-      "\n",
-      "Attaching package: ‘BiocGenerics’\n",
-      "\n",
-      "The following objects are masked from ‘package:parallel’:\n",
-      "\n",
-      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
-      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
-      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    combine, intersect, setdiff, union\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    IQR, mad, sd, var, xtabs\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
-      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
-      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
-      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
-      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
-      "    union, unique, unsplit, which, which.max, which.min\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘S4Vectors’\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    first, rename\n",
-      "\n",
-      "The following object is masked from ‘package:tidyr’:\n",
-      "\n",
-      "    expand\n",
-      "\n",
-      "The following object is masked from ‘package:base’:\n",
-      "\n",
-      "    expand.grid\n",
-      "\n",
-      "Loading required package: IRanges\n",
-      "\n",
-      "Attaching package: ‘IRanges’\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    collapse, desc, slice\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    reduce\n",
-      "\n",
-      "Loading required package: GenomicRanges\n",
-      "Loading required package: GenomeInfoDb\n",
-      "Loading required package: SummarizedExperiment\n",
-      "Loading required package: Biobase\n",
-      "Welcome to Bioconductor\n",
-      "\n",
-      "    Vignettes contain introductory material; view with\n",
-      "    'browseVignettes()'. To cite Bioconductor, see\n",
-      "    'citation(\"Biobase\")', and for packages 'citation(\"pkgname\")'.\n",
-      "\n",
-      "Loading required package: DelayedArray\n",
-      "Loading required package: matrixStats\n",
-      "\n",
-      "Attaching package: ‘matrixStats’\n",
-      "\n",
-      "The following objects are masked from ‘package:Biobase’:\n",
-      "\n",
-      "    anyMissing, rowMedians\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    count\n",
-      "\n",
-      "Loading required package: BiocParallel\n",
-      "\n",
-      "Attaching package: ‘DelayedArray’\n",
-      "\n",
-      "The following objects are masked from ‘package:matrixStats’:\n",
-      "\n",
-      "    colMaxs, colMins, colRanges, rowMaxs, rowMins, rowRanges\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    simplify\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    aperm, apply, rowsum\n",
-      "\n"
+      "Loading required package: ggpubr\n"
      ]
     }
    ],
@@ -126,7 +25,6 @@
     "library(tidyverse)\n",
     "library(survival)\n",
     "library(survminer)\n",
-    "library(DESeq2)\n",
     "\n",
     "# Custom package\n",
     "library(rutils)"
@@ -154,72 +52,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  geneID = col_character(),\n",
-      "  baseMean = col_double(),\n",
-      "  log2FoldChange = col_double(),\n",
-      "  lfcSE = col_double(),\n",
-      "  stat = col_double(),\n",
-      "  pvalue = col_double(),\n",
-      "  padj = col_double(),\n",
-      "  in_matrisome = col_logical(),\n",
-      "  division = col_character(),\n",
-      "  category = col_character(),\n",
-      "  gene_name = col_character(),\n",
-      "  synonyms = col_character(),\n",
-      "  hgnc_ids = col_double(),\n",
-      "  hgnc_ids_links = col_double(),\n",
-      "  uniprot_ids = col_character(),\n",
-      "  refseq_ids = col_character(),\n",
-      "  orthology = col_character(),\n",
-      "  notes = col_character()\n",
-      ")\n",
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  sample_name = col_character(),\n",
-      "  condition = col_character(),\n",
-      "  data_source = col_character()\n",
-      ")\n",
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  Division = col_character(),\n",
-      "  Category = col_character(),\n",
-      "  `Gene Symbol` = col_character(),\n",
-      "  `Gene Name` = col_character(),\n",
-      "  Synonyms = col_character(),\n",
-      "  HGNC_IDs = col_double(),\n",
-      "  `HGNC_IDs Links` = col_double(),\n",
-      "  UniProt_IDs = col_character(),\n",
-      "  Refseq_IDs = col_character(),\n",
-      "  Orthology = col_character(),\n",
-      "  Notes = col_character()\n",
-      ")\n"
-     ]
-    }
-   ],
-   "source": [
-    "sig_deg_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_sig_DESeq_results_xref_matrisome.tsv\"))\n",
-    "matrisome_sig_deg_df <- sig_deg_df %>%\n",
-    "    dplyr::filter(in_matrisome == TRUE)\n",
-    "coldata_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/coldata.tsv\"))\n",
-    "matrisome_df <- rutils::load_matrisome_df(matrisome_list)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,13 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -274,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -324,18 +151,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load, filter, and normalize count data"
+    "# Load normalized matrisome count data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -344,34 +166,24 @@
       "Parsed with column specification:\n",
       "cols(\n",
       "  .default = col_double(),\n",
-      "  Hugo_Symbol = col_character()\n",
+      "  geneID = col_character()\n",
       ")\n",
-      "See spec(...) for full column specifications.\n",
-      "converting counts to integer mode\n"
+      "See spec(...) for full column specifications.\n"
      ]
     }
    ],
    "source": [
-    "counts_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/counts.tsv\")) %>%\n",
-    "    dplyr::rename(geneID = Hugo_Symbol) %>%\n",
-    "    dplyr::select(-Entrez_Gene_Id) %>%\n",
-    "    dplyr::mutate_if(is.numeric, round, 0) %>%\n",
-    "    dplyr::filter(geneID %in% matrisome_df$gene_symbol)    # Only care about matrisome genes\n",
-    "\n",
+    "norm_matrisome_counts <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[i], \"/norm_matrisome_counts.tsv\")) %>%\n",
+    "    column_to_rownames(var = \"geneID\") %>%\n",
+    "    as.matrix()\n",
     "\n",
     "# Match up columns of counts with rows of survival data & only include samples present in survival data\n",
-    "filtered_survival_counts_df <- counts_df[, c(\"geneID\", filtered_survival_df$sample_name)] %>%\n",
-    "    dplyr::filter(rowSums(.[, -1]) > 0)    # Ignore genes which are unexpressed in this group\n",
-    "\n",
-    "norm_filtered_survival_counts <- varianceStabilizingTransformation(\n",
-    "    as.matrix(filtered_survival_counts_df[, -1])\n",
-    ")\n",
-    "rownames(norm_filtered_survival_counts) <- filtered_survival_counts_df$geneID"
+    "norm_matrisome_survival_counts <- norm_matrisome_counts[, filtered_survival_df$sample_name]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -394,8 +206,7 @@
     }
    ],
    "source": [
-    "# Sample-wise gene counts should match the order of samples \n",
-    "all(rownames(t(norm_filtered_survival_counts)) == filtered_survival_df$sample_name)"
+    "all(rownames(t(norm_matrisome_survival_counts)) == filtered_survival_df$sample_name)"
    ]
   },
   {
@@ -407,13 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "joined_survival_counts_df <- filtered_survival_df %>%\n",
     "    inner_join(\n",
-    "        as_tibble(t(norm_filtered_survival_counts), rownames = \"sample_name\"),\n",
+    "        as_tibble(t(norm_matrisome_survival_counts), rownames = \"sample_name\"),\n",
     "        by = \"sample_name\"\n",
     "    )\n",
     "\n",
@@ -425,19 +236,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test significance of including a gene"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Cox PH model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -496,15 +300,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "122"
+      ],
+      "text/latex": [
+       "122"
+      ],
+      "text/markdown": [
+       "122"
+      ],
+      "text/plain": [
+       "[1] 122"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Re-sub '-' for '_' now that no longer needed for formulae\n",
     "cox_regression_df <- tibble(\"geneID\" = gsub(\"_\", \"-\", genes_of_interest), \"gene_pval\" = gene_pvals, \"gene_coeff\" = gene_coeffs)\n",
     "sig_cox_regression_df <- cox_regression_df %>%\n",
     "    dplyr::filter(gene_pval < 0.05)\n",
-    "write_tsv(sig_cox_regression_df, paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_sig_coxph_results.tsv\"))"
+    "nrow(sig_cox_regression_df)\n",
+    "write_tsv(cox_regression_df, paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_coxph_results.tsv\"))"
    ]
   }
  ],
