--- a/ML_analysis/MI_feature_selection.ipynb
+++ b/ML_analysis/MI_feature_selection.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from sklearn.feature_selection import mutual_info_regression, mutual_info_classif\n",
     "\n",
     "import utils.dev_config as dev_conf\n",
     "import utils.preprocessing as prep"
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,18 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "event_code = {\"Alive\": 0, \"Dead\": 1}\n",
     "covariate_cols = [\"age_at_diagnosis\", \"bmi\", \"race\", \"ethnicity\"]\n",
-    "dep_cols = [\"vital_status\", \"survival_time\"]"
+    "dep_cols = [\"vital_status\", \"survival_time\"]\n",
+    "cat_cols = [\"race\", \"ethnicity\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +88,13 @@
     "        .query(\"vital_status == 1\")\n",
     "        .dropna()\n",
     "        .reset_index(drop=True)\n",
+    "        .pipe(pd.get_dummies, columns=cat_cols)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +103,7 @@
        "0.18532818532818532"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +111,213 @@
    "source": [
     "filtered_survival_df.shape[0]\n",
     "filtered_survival_df.shape[0] / survival_df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load normalized matrisome count data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm_matrisome_counts_df = pd.read_csv(f\"{dirs.data_dir}/{unified_dsets[i]}/norm_matrisome_counts.tsv\", sep='\\t')\n",
+    "norm_matrisome_survival_counts_t_df = (\n",
+    "    norm_matrisome_counts_df[[\"geneID\"] + list(filtered_survival_df.sample_name)]\n",
+    "        .set_index(\"geneID\")                        # set as index so will be column names\n",
+    "        .transpose()\n",
+    "        .rename_axis(None, axis=1)                  # column.name will be set to \"geneID\", we don't want this\n",
+    "        .reset_index()                              # \"sample_name\" should now be its own column\n",
+    "        .rename({\"index\": \"sample_name\"}, axis=1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined_survival_counts_df = (\n",
+    "    pd.merge(filtered_survival_df, norm_matrisome_survival_counts_t_df, on=\"sample_name\")\n",
+    "        .drop(\"vital_status\", axis=1)\n",
+    "        .set_index(\"sample_name\")\n",
+    ")\n",
+    "# This feature is integral\n",
+    "joined_survival_counts_df.age_at_diagnosis = joined_survival_counts_df.age_at_diagnosis.astype(\"int\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We leave the y variable out of the mask\n",
+    "discr_mask = np.array(list(map(lambda x: np.issubdtype(x, np.integer), joined_survival_counts_df.dtypes.values)))[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = joined_survival_counts_df.iloc[:, 11:].values\n",
+    "y = joined_survival_counts_df.iloc[:, 0].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# res = mutual_info_regression(X, y, discrete_features=discr_mask)\n",
+    "res = mutual_info_regression(X, y, discrete_features=discr_mask[10:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_df = pd.DataFrame({\"geneID\": joined_survival_counts_df.columns[11:], \"MI\": res})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geneID</th>\n",
+       "      <th>MI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>CLEC11A</td>\n",
+       "      <td>0.362796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>311</th>\n",
+       "      <td>LOXL2</td>\n",
+       "      <td>0.334747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>SERPIND1</td>\n",
+       "      <td>0.329892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>LAMB1</td>\n",
+       "      <td>0.255152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>882</th>\n",
+       "      <td>FGF11</td>\n",
+       "      <td>0.252130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432</th>\n",
+       "      <td>FREM3</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>SEMA3D</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>OIT3</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>MBL2</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1007</th>\n",
+       "      <td>S100A6</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1008 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        geneID        MI\n",
+       "247    CLEC11A  0.362796\n",
+       "311      LOXL2  0.334747\n",
+       "112   SERPIND1  0.329892\n",
+       "367      LAMB1  0.255152\n",
+       "882      FGF11  0.252130\n",
+       "...        ...       ...\n",
+       "432      FREM3  0.000000\n",
+       "436     SEMA3D  0.000000\n",
+       "437       OIT3  0.000000\n",
+       "438       MBL2  0.000000\n",
+       "1007    S100A6  0.000000\n",
+       "\n",
+       "[1008 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_df.sort_values(\"MI\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig_coxph_res_df = (\n",
+    "    pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_coxph_results.tsv\", sep='\\t')\n",
+    "        .query(\"gene_pval < 0.05\")\n",
+    ")"
    ]
   }
  ],
