Reworking visualizations & analysis to prepare for research presentation update.

--- a/ML_analysis/coxph_feature_selection.ipynb
+++ b/ML_analysis/coxph_feature_selection.ipynb
@@ -300,22 +300,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "122"
+       "120"
       ],
       "text/latex": [
-       "122"
+       "120"
       ],
       "text/markdown": [
-       "122"
+       "120"
       ],
       "text/plain": [
-       "[1] 122"
+       "[1] 120"
       ]
      },
      "metadata": {},
@@ -327,8 +327,117 @@
     "cox_regression_df <- tibble(\"geneID\" = gsub(\"_\", \"-\", genes_of_interest), \"gene_pval\" = gene_pvals, \"gene_coeff\" = gene_coeffs)\n",
     "sig_cox_regression_df <- cox_regression_df %>%\n",
     "    dplyr::filter(gene_pval < 0.05)\n",
-    "nrow(sig_cox_regression_df)\n",
     "write_tsv(cox_regression_df, paste0(dirs$analysis_dir, \"/\", unified_dsets[i], \"_coxph_results.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "120"
+      ],
+      "text/latex": [
+       "120"
+      ],
+      "text/markdown": [
+       "120"
+      ],
+      "text/plain": [
+       "[1] 120"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.119047619047619"
+      ],
+      "text/latex": [
+       "0.119047619047619"
+      ],
+      "text/markdown": [
+       "0.119047619047619"
+      ],
+      "text/plain": [
+       "[1] 0.1190476"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Num. predictive genes\n",
+    "nrow(sig_cox_regression_df)\n",
+    "# Prop. matrisome genes which are predictive\n",
+    "nrow(sig_cox_regression_df) / nrow(norm_matrisome_survival_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interpretation of coefficient sign\n",
+    "\n",
+    "Source: https://www.statsdirect.com/help/survival_analysis/cox_regression.htm#:~:text=In%20the%20context%20of%20an,Cox%20regression%20for%20survival%20analysis.&text=The%20coefficients%20in%20a%20Cox,with%20which%20it%20is%20associated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "88"
+      ],
+      "text/latex": [
+       "88"
+      ],
+      "text/markdown": [
+       "88"
+      ],
+      "text/plain": [
+       "[1] 88"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "32"
+      ],
+      "text/latex": [
+       "32"
+      ],
+      "text/markdown": [
+       "32"
+      ],
+      "text/plain": [
+       "[1] 32"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Genes associated with negative prognosis\n",
+    "nrow(sig_cox_regression_df %>%\n",
+    "    dplyr::filter(gene_coeff > 0))\n",
+    "\n",
+    "# Genes associated with positive prognosis\n",
+    "nrow(sig_cox_regression_df %>%\n",
+    "    dplyr::filter(gene_coeff < 0))"
    ]
   }
  ],
