--- a/DGE_analysis/unified_DGE_post.ipynb
+++ b/DGE_analysis/unified_DGE_post.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "\n",
@@ -21,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +104,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.355152652899911"
+      ],
+      "text/latex": [
+       "0.355152652899911"
+      ],
+      "text/markdown": [
+       "0.355152652899911"
+      ],
+      "text/plain": [
+       "[1] 0.3551527"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -96,7 +129,62 @@
     "sig_dge_res_df <- dge_res_df %>%\n",
     "    dplyr::filter(padj < 0.05) %>%\n",
     "    dplyr::filter(abs(log2FoldChange) > log2(2))\n",
-    "nrow(sig_dge_res_df)"
+    "# Number sig DEGs\n",
+    "nrow(sig_dge_res_df)\n",
+    "# Prop. total genes flagged as significant\n",
+    "nrow(sig_dge_res_df) / nrow(counts_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3703"
+      ],
+      "text/latex": [
+       "3703"
+      ],
+      "text/markdown": [
+       "3703"
+      ],
+      "text/plain": [
+       "[1] 3703"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "3486"
+      ],
+      "text/latex": [
+       "3486"
+      ],
+      "text/markdown": [
+       "3486"
+      ],
+      "text/plain": [
+       "[1] 3486"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Upregulated\n",
+    "nrow(sig_dge_res_df %>%\n",
+    "    dplyr::filter(log2FoldChange > 0))\n",
+    "\n",
+    "# Downregulated\n",
+    "nrow(sig_dge_res_df %>%\n",
+    "    dplyr::filter(log2FoldChange < 0))"
    ]
   },
   {
@@ -108,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -365,6 +453,103 @@
    "source": [
     "nrow(sig_dge_matrisome_lj_df) == nrow(sig_dge_res_df)\n",
     "head(sig_dge_matrisome_lj_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "559"
+      ],
+      "text/latex": [
+       "559"
+      ],
+      "text/markdown": [
+       "559"
+      ],
+      "text/plain": [
+       "[1] 559"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.544303797468354"
+      ],
+      "text/latex": [
+       "0.544303797468354"
+      ],
+      "text/markdown": [
+       "0.544303797468354"
+      ],
+      "text/plain": [
+       "[1] 0.5443038"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "241"
+      ],
+      "text/latex": [
+       "241"
+      ],
+      "text/markdown": [
+       "241"
+      ],
+      "text/plain": [
+       "[1] 241"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "318"
+      ],
+      "text/latex": [
+       "318"
+      ],
+      "text/markdown": [
+       "318"
+      ],
+      "text/plain": [
+       "[1] 318"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sig_dge_matrisome_df <- sig_dge_matrisome_lj_df %>%\n",
+    "    dplyr::filter(in_matrisome == TRUE)\n",
+    "\n",
+    "# Number of DEMGs\n",
+    "nrow(sig_dge_matrisome_df)\n",
+    "\n",
+    "# Prop. matrisome genes flagged as significant\n",
+    "nrow(sig_dge_matrisome_df) / nrow(matrisome_df)\n",
+    "\n",
+    "# Upregulated\n",
+    "nrow(sig_dge_matrisome_df %>%\n",
+    "    dplyr::filter(log2FoldChange > 0))\n",
+    "\n",
+    "# Downregulated\n",
+    "nrow(sig_dge_matrisome_df %>%\n",
+    "    dplyr::filter(log2FoldChange < 0))"
    ]
   },
   {
